--- a/mru-portfolio/styles/globals.css
+++ b/mru-portfolio/styles/globals.css
@@ -20,7 +20,7 @@ html {
   }
 
   h1 {
-    @apply text-4xl sm:text-5xl md:text-6xl font-[Raleway]
+    @apply text-4xl sm:text-5xl md:text-6xl 
   }
 
   h2 {
@@ -31,7 +31,7 @@ html {
     @apply cursor-pointer
   }
 
-  button {
+  /* button {
     @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white
-  }
+  } */
 }
